--- a/backend/data/projects.json
+++ b/backend/data/projects.json
@@ -5,7 +5,7 @@
       "name": "ludens",
       "published": "2020-04",
       "title": "Developed the front-end for Luden's new website within two weeks",
-      "descriptions": "<p>The purpose of this project was to build a new website for a Norwegian design and technology company located in Oslo. The end-goal is to get the new website to sell the company's digital services and software. It's equally important to make sure that the website is tied directly to what the prospective customers are expecting to see and experience when they arrive on the page.</p><p>Together with another developer at Ludens, I developed this website from scratch to end product within only two weeks.The final product has a plethora of features, functionality, and configurations, including Search Optimization, integration with a scalable, cross-platform content management system and easy forms.</p><strong>My contribution in this project includes: developing the header, footer and article components, creating on-site search functionalities, and building the contact forms. I was also responsible for creating automated build, test, and deploy workflows using CircleCI.</strong>",
+      "descriptions": "<p>The purpose of this project was to build a new website for a Norwegian design and technology company located in Oslo. The end-goal is to get the new website to sell the company's digital services and software.</p><p>Together with another developer at Ludens, I developed this website from scratch to end product within only two weeks. The final product has a plethora of features, functionality, and configurations, including SEO, integration with a scalable, headless,cross-platform content management system and easy forms.</p><strong>My contribution in this project includes: developing the header, footer and article components, creating on-site search functionalities, and building the contact forms. I was also responsible for creating automated build, test, and deploy workflows using CircleCI.</strong>",
       "technologies": [
         "react",
         "typescript",
@@ -26,7 +26,7 @@
       "name": "asker kulturhus",
       "published": "2019-05",
       "title": "My very first React project at work: Asker Kulturhus' website",
-      "descriptions": "<p>I got my first developer job after 6 months of learning web development at Noroff. Ludens is a Norwegian design and technology company, building its clients’ websites mostly using React, TypeScript, Node, Next and MongoDB. They also handle SEO, graphic designs and marketing among other things.</p><p>Asker Kulturhus' website was my first web development project in the company. I got a crash course in developing websites with React, TypeScript, Node and MongoDB, and started putting these to work immediately.</p><p>Needless to say, I was excited to be in the industry, regardless of what I would be doing. It just so happens that I have been dying to learn fullstack web development anyway, so landing this job was perfect for me on many levels.</p>",
+      "descriptions": "<p>I got my first developer job after 6 months of learning web development at Noroff. Ludens is a Norwegian design and technology company, building its clients’ websites mostly using React, TypeScript, Node, Next and MongoDB. They also handle SEO, graphic designs and digital marketing among other things.</p><p>Asker Kulturhus' website was my first web development project in the company. I got a crash course in developing websites with React, TypeScript, Node and MongoDB, and started putting these to work immediately.</p>",
       "technologies": ["react", "typescript", "sanity", "styled-components"],
       "categories": ["work projects"],
       "website": "https://askerkulturhus.no/",
@@ -81,8 +81,8 @@
       "id": "b0a7f1b9b45840458b1944a6304d85b6",
       "name": "search for RAWG Video Games",
       "published": "2020-03",
-      "title": "Hooks for Advanced React Component Patterns",
-      "descriptions": "<p>I created this video game search app with React and TypeScript for the JavaScript Frameworks course at Noroff.</p><h3>Technology Stack</h3><ul><li>TypeScript</li><li>React</li><li>React router dom</li><li>Styled-components</li><li>Storybook</li></ul><h3>Features</h3><ul><li>Creating a custom hook for fetching Data</li><li>Managing global state with React&#39;s Hooks and Context API</li><li>Lazy Loading React Components (with react.lazy and suspense)</li><li>Taking advantage of local storage to create persist state on page refresh</li><li>Enabling dark mode with Styled-components</li><li>Testing with Jest</li><li>Creating reusable array sort functions</li><li>Creating reusable component</li></ul>",
+      "title": "Hooks for Advanced React Component Development",
+      "descriptions": "<p>I created this video game search app with React and TypeScript for the JavaScript Frameworks course at Noroff.</p><h3>Technology Stack</h3><ul><li>TypeScript</li><li>React</li><li>React router dom</li><li>Styled-components</li><li>Storybook</li></ul><h3>Features</h3><ul><li>Creating a custom hook for fetching Data</li><li>Managing global state with React&#39;s Hooks and Context API</li><li>Lazy Loading components with React.lazy and React.suspense </li><li>Taking advantage of local storage to create persist state on page refresh</li><li>Enabling dark mode with Styled-components' theme provider</li><li>Testing with Jest</li><li>Creating reusable array sort functions</li><li>Creating reusable component and utils</li></ul>",
       "technologies": ["typescript", "react"],
       "categories": ["school projects", "search app"],
       "website": "https://agitated-kilby-44b818.netlify.com/",
@@ -95,7 +95,7 @@
       "name": "gravstein24",
       "published": "2019-09",
       "title": "Selling gravestones online: from scratch to final products",
-      "descriptions": "<p>Partnered with the marketing and creative teams at Ludens, our development team developed a web shop for Gravestein24. I participated in and contributed to the whole development process from the backend to the frontend, and from developing the product model and schemas with MongoDB, Node and Next to creating the product page on the frontend. I also developed the Redis implementation of client side caching for improving the website's performance as well as Sessionless Authentication using JWTs for a more secured authentication process.</p>",
+      "descriptions": "<p>Cooperated with the marketing and design teams at Ludens, our development team developed a web shop for Gravestein24. I participated in and contributed to the whole development process from the backend to the frontend, and from developing the product model and schemas with MongoDB, Node and Next to creating the product page on the frontend. I also developed client side caching with Redis for improving the performance as well as authentication using JWTs.</p>",
       "technologies": ["react", "typescript", "node", "next", "mongoDB"],
       "categories": ["work projects", "e-commerce"],
       "website": "https://www.gravstein24.no/",
